--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">RecFilm</string>
+    <string name="button1">МЕНЮ</string>
+    <string name="button2">ИЗБРАННОЕ</string>
+    <string name="button3">ПОСМОТРЕТЬ ПОЗЖЕ</string>
+    <string name="button4">ПОДБОРКИ</string>
+    <string name="button5">НАСТРОЙКИ</string>
 </resources>
