Drawable для фона

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="button3">ПОСМОТРЕТЬ ПОЗЖЕ</string>
     <string name="button4">ПОДБОРКИ</string>
     <string name="button5">НАСТРОЙКИ</string>
+    <string name="disclaimer">Постеры предоставленны https://www.movieposters.com/</string>
 </resources>
