1.Добавил иконки и меню для тулбара и навигации. 2.Удалил ненужные кнопки, сделал общий фон. 3.Откоректировал размеры банеров. 4.Добавил в ресурсы названия кнопок кнопок.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="button4">ПОДБОРКИ</string>
     <string name="button5">НАСТРОЙКИ</string>
     <string name="disclaimer">Постеры предоставленны https://www.movieposters.com/</string>
+    <string name="menu_selections_title">Подборки</string>
+    <string name="menu_watch_later_title">Смотреть позже</string>
+    <string name="menu_favorites_title">Избранное</string>
+    <string name="menu_settings">Настройки</string>
 </resources>
