--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="menu_watch_later_title">Смотреть позже</string>
     <string name="menu_favorites_title">Избранное</string>
     <string name="menu_settings">Настройки</string>
+    <string name="menu_favorites">Избранное</string>
+    <string name="menu_watch_later">Посмотреть позже</string>
+    <string name="menu_selections">Подборки</string>
+    <string name="menu_settings_toast">Настройки</string>
 </resources>
