--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -12,4 +12,8 @@
     <string name="menu_watch_later_title">Watch later</string>
     <string name="menu_favorites_title">Favourites</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_favorites">Favourites</string>
+    <string name="menu_watch_later">Watch later</string>
+    <string name="menu_selections">Collections</string>
+    <string name="menu_settings_toast">Settings</string>
 </resources>
