Добавил константу, строки онка диалога сохранил в ресурсы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="description_anna_inveting">В «Изобретая Анну» журналист, которому нужно многое доказать, расследует дело Анны Делви, легендарной немецкой наследницы Instagram, которая украла сердца светской жизни Нью-Йорка, а также украла их деньги. Но является ли Анна самой крупной аферисткой Нью-Йорка или она просто новый образ американской мечты? Анна и репортер образуют темную и забавную связь любви и ненависти, пока Анна ожидает суда, а наш репортер борется со временем, чтобы ответить на самый главный вопрос в Нью-Йорке: кто такая Анна Делви? Сериал вдохновлен статьей Джессики Пресслер, которая также является продюсером, в журнале New York Magazine «Как Анна Делви обманула тусовщиков Нью-Йорка».</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_Dialog">Вы хотите выйти?</string>
+    <string name="text_Dialog_yes">Да</string>
+    <string name="text_Dialog_no">Нет</string>
 </resources>
