загрузку постера в галерею Coroutine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="radio_button_upcoming">Скоро</string>
     <string name="radio_button_playing">В кинотеатрах</string>
     <string name="radio_group_header">Подборка на главном экране:</string>
+
+    <string name = "permission_storage"> Нет разрешения. Пожалуйста, предоставтераз решение</string>
+    <string name = "downloaded_to_gallery">"Сохранено в галерею"</string>
+    <string name = "open">В галерею</string>
 </resources>
